<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/changed_files"
        android:title="@string/last_changes"
        android:icon="@drawable/last_modify"
        app:showAsAction="always"/>
    <item
        android:title="@string/sort"
        android:icon="@drawable/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_name"
                android:title="@string/sort_by_name"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_date"
                android:title="@string/sort_by_date"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_type"
                android:title="@string/sort_by_type"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_asc"
                android:title="@string/sort_by_size_asc"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_desc"
                android:title="@string/sort_by_size_desc"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>